tested and new demos

--- a/notebooks/tasks/disambiguation_candidates.ipynb
+++ b/notebooks/tasks/disambiguation_candidates.ipynb
@@ -13,7 +13,7 @@
    "id": "3c6a1c79",
    "metadata": {},
    "source": [
-    "# Disambiguation with Candidates\n",
+    "# 3. Disambiguation with Candidates\n",
     "\n",
     "This notebook disambiguates the entities found by the NER notebook by linking them to WikiData concepts\n",
     "\n",
@@ -55,7 +55,7 @@
    "id": "e7ce3540",
    "metadata": {},
    "source": [
-    "## 1. Import required software libraries\n",
+    "## 3.1. Import required software libraries\n",
     "\n",
     "Disambiguation requires importing some standard software libraries. This step may take some time when run for the first time but in successive runs it will be a lot faster."
    ]
@@ -217,7 +217,7 @@
    "id": "b559246c-da0e-4d94-b857-65527220e7f6",
    "metadata": {},
    "source": [
-    "## 2. Read the texts that require processing\n",
+    "## 3.2. Read the texts that require processing\n",
     "\n",
     "The texts should have been processed by the ner.ipynb notebook. The file read here is an output file of that notebook. We read the texts and the associated metadata and show the first text with its entities."
    ]
@@ -243,7 +243,7 @@
    "id": "7da6363b-74e5-4177-b3f4-5cf2f7c3fafe",
    "metadata": {},
    "source": [
-    "## 3. Disambiguation candidate generation\n",
+    "## 3.3. Disambiguation candidate generation\n",
     "\n",
     "We need candidate ids for the entities to make the task for the LLM easier. We obtain these candidate ids by searching for the entities in wikidata.org. The search step returns seven candidate ids with a description text for each of them. In order not to overload the website, we use a cache for storing entities that were looked up earlier. We also wait for 10 seconds (variable `SLEEP_TIME_FETCH_PAGE`) between the searches. "
    ]
@@ -317,10 +317,9 @@
     "        if entity[\"entity_text\"] not in wikidata_cache.keys():\n",
     "            utils.squeal(f\"Looking up entity {entity['entity_text']} (text id {entity['text_id'] + 1}) on WikiData.org...\")\n",
     "            wikidata_data = query_wikidata_for_single_entity(entity[\"entity_text\"])\n",
-    "            wikidata_cache[entity[\"entity_text\"]] = [{\"id\": candidate[\"id\"], \n",
-    "                                                            \"description\": candidate[\"description\"]} \n",
-    "                                                            for candidate in json.loads(wikidata_data.text)[\"search\"]\n",
-    "                                                            if \"description\" in candidate.keys()]\n",
+    "            wikidata_cache[entity[\"entity_text\"]] = [{\"id\": candidate[\"id\"], \"description\": candidate[\"description\"]} \n",
+    "                                                     for candidate in json.loads(wikidata_data.text)[\"search\"]\n",
+    "                                                     if \"description\" in candidate.keys()]\n",
     "            utils.write_json_file(DISAMBUGUATION_CACHE_FILE_WIKIDATA, wikidata_cache)\n",
     "    print(\"Finished processing\")\n",
     "    utils.save_data_to_json_file(wikidata_cache, file_name=DISAMBUGUATION_CACHE_FILE_WIKIDATA, in_colab=in_colab)\n",
@@ -354,7 +353,7 @@
    "id": "e48267cd-7e1b-4128-9f32-4ac20a54628b",
    "metadata": {},
    "source": [
-    "## 4. Disambiguate entities with ChatGPT\n",
+    "## 3.4. Disambiguate entities with ChatGPT\n",
     "\n",
     "We disambiguate entities by sending a prompt with each entity text, the context text and the WikiData candidates ids and their descriptions to an LLM. We ask the LLM to return the id associated with the description that best matches the entity in the given context."
    ]
@@ -364,7 +363,25 @@
    "id": "aeb61643-a253-4dc4-a705-6475a4a78e55",
    "metadata": {},
    "source": [
-    "First we define six helper functions"
+    "First we define two helper functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77cc4583-49af-4814-a844-5b1b52fd58ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_llm_response(response, candidates, model):\n",
+    "    \"\"\"cleanup llm response and return associated candidate wikidata lemma\"\"\"\n",
+    "    wikidata_id = regex.sub(r\"^.*(Q\\d+).*$\", r\"\\1\", response)\n",
+    "    if not regex.search(r\"^Q\\d+$\", wikidata_id):\n",
+    "        return {\"id\": \"\", \"description\": \"\", \"model\": model}\n",
+    "    for candidate in candidates:\n",
+    "        if candidate[\"id\"] == wikidata_id:\n",
+    "            return candidate | {\"model\": model}\n",
+    "    return {\"id\": \"\", \"description\": \"\"}"
    ]
   },
   {
@@ -372,15 +389,7 @@
    "id": "ef64fd3d-e7fc-41b7-b505-57c0425ef9a3",
    "metadata": {},
    "source": [
-    "This helper function creates a prompt for each entity and sends it to the LLM and collect the responses. When the combination of the entity and the context text is available in the cache of previously processed entities, we skip consulting ChatGPT and use the wikidata id stored in the cache. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bcb2b5fd-85e5-472c-8119-e2e02e3276ff",
-   "metadata": {},
-   "source": [
-    "We call the function to select the right WikiData id with ChatGPT. Next, we add the selections to the texts_output variable. Change the value of the MAX_PROCESSED variable if you do not want all texts to be processed by the LLM. The results are stored in the `entities` variable. We show the first of the results."
+    "The second helper function creates a prompt for each entity and sends it to the LLM and collect the responses. When the combination of the entity and the context text is available in the cache of previously processed entities, we skip consulting ChatGPT and use the wikidata id stored in the cache. "
    ]
   },
   {
@@ -407,7 +416,8 @@
     "                openai_client = utils.connect_to_openai(openai_api_key)                \n",
     "            utils.squeal(f\"Sending entity \\\"{entity['entity_text']}\\\" of text {entity['text_id'] + 1} to {model}\")\n",
     "            prompt = make_prompt(entity[\"entity_text\"], entity[\"text\"], entity[\"candidates\"])\n",
-    "            entity[\"wikidata_id\"] = {model: utils.process_text_with_gpt(openai_client, model, prompt)}\n",
+    "            response = utils.process_text_with_gpt(openai_client, model, prompt)\n",
+    "            entity[\"wikidata_id\"] = process_llm_response(response, entity[\"candidates\"], model)\n",
     "            if entity[\"entity_text\"] not in llm_cache:\n",
     "                llm_cache[entity[\"entity_text\"]] = {}\n",
     "            if entity[\"text\"] not in llm_cache[entity[\"entity_text\"]]:\n",
@@ -422,6 +432,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bcb2b5fd-85e5-472c-8119-e2e02e3276ff",
+   "metadata": {},
+   "source": [
+    "We call the function to select the right WikiData id with ChatGPT. Next, we add the selections to the texts_output variable. Change the value of the MAX_PROCESSED variable if you do not want all texts to be processed by the LLM. The results are stored in the `entities` variable. We show the first of the results."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "61717672-8733-4f59-b564-b060e5e88ee8",
@@ -431,7 +449,7 @@
     "MAX_PROCESSED = 100\n",
     "MAX_PROCESSED_ENTITIES = len([entity for entity in entities if entity[\"text_id\"] < MAX_PROCESSED])\n",
     "\n",
-    "processed_entities = openai_wikidata_id_selection(model, entities[MAX_PROCESSED_ENTITIES])\n",
+    "processed_entities = openai_wikidata_id_selection(model, entities[:MAX_PROCESSED_ENTITIES])\n",
     "texts_output = add_wikidata_ids_to_texts_input(texts_input[:MAX_PROCESSED], processed_entities)\n",
     "print({key: value for key, value in processed_entities[0].items() if key in [\"entity_text\", \"text\", \"wikidata_id\"]})"
    ]
@@ -441,7 +459,7 @@
    "id": "4fd36a9b-9bb7-4f25-b32a-015293afcc27",
    "metadata": {},
    "source": [
-    "## 5. Disambiguation visualization\n",
+    "## 3.5. Disambiguation visualization\n",
     "\n",
     "Here we show the results of the disambiguation task in a more readable format. We use the helper function `mark_entities_in_text` for this. But you will not find the definition of this helper function here: it is defined in the file `utils.py` because it is used by other notebooks as well."
    ]
@@ -471,7 +489,7 @@
    "id": "b64655dc-0d64-4746-96aa-ff008cf4f427",
    "metadata": {},
    "source": [
-    "## 6. Save results\n",
+    "## 3.6. Save results\n",
     "\n",
     "We save the results in a json file"
    ]
@@ -491,7 +509,7 @@
    "id": "27bfcba0-304f-4c9a-8873-3890401edeb8",
    "metadata": {},
    "source": [
-    "## 7. Alternatives for disambiguation\n",
+    "## 3.7. Alternatives for disambiguation\n",
     "\n",
     "Here we define some alternatives for disambiguation, for example if you do not have an OpenAI API key or if you do not want to share your data with OpenAI."
    ]
@@ -501,7 +519,7 @@
    "id": "d31bf85b-1df9-430a-86d5-9b6718635af8",
    "metadata": {},
    "source": [
-    "### 7.1. Disambiguate entities with Qwen\n",
+    "### 3.7.1. Disambiguate entities with Qwen\n",
     "\n",
     "Here we use [Qwen](https://en.wikipedia.org/wiki/Qwen), a locally-run model developed by the company Alibaba. The model has hardware requirements which your computer may not satisfy: it needs a GPU and about 12 gigabytes of memory. When running this model on Google Colab, it is recommended to use the runtime environment `T4 GPU`."
    ]
@@ -524,14 +542,16 @@
     "            utils.squeal(f\"Retrieving entity \\\"{entity['entity_text']}\\\" of text {entity['text_id'] + 1} from cache\")\n",
     "            entity[\"wikidata_id\"] = llm_cache[entity[\"entity_text\"]][entity[\"text\"]][model] | {\"model\": model}\n",
     "        else:\n",
-    "            utils.squeal(f\"Sending entity \\\"{entity['entity_text']}\\\" of text {entity['text_id'] + 1} to {model}\")\n",
     "            if \"ollama\" in sys.modules:\n",
     "                ollama = utils.importlib.import_module(\"ollama\")\n",
     "            else:\n",
     "                ollama = utils.import_ollama_module()\n",
     "            utils.install_ollama_model(model, ollama)\n",
+    "            utils.squeal(f\"Sending entity \\\"{entity['entity_text']}\\\" of text {entity['text_id'] + 1} to {model}\")\n",
     "            prompt = make_prompt(entity[\"entity_text\"], entity[\"text\"], entity[\"candidates\"])\n",
-    "            entity[\"wikidata_id\"] = {model: utils.process_text_with_ollama(model, prompt, ollama)}\n",
+    "            response = utils.process_text_with_ollama(model, prompt, ollama)\n",
+    "            wikidata_id = regex.sub(r\"^.*(Q\\d+).*$\", r\"\\1\", response)\n",
+    "            entity[\"wikidata_id\"] = {model: wikidata_id if regex.search(r\"^Q\\d+$\", wikidata_id) else \"\"}\n",
     "            if entity[\"entity_text\"] not in llm_cache:\n",
     "                llm_cache[entity[\"entity_text\"]] = {}\n",
     "            if entity[\"text\"] not in llm_cache[entity[\"entity_text\"]]:\n",
