--- a/notebooks/tasks/entity_linking.ipynb
+++ b/notebooks/tasks/entity_linking.ipynb
@@ -13,7 +13,7 @@
    "id": "0dbc201a-4ecd-4714-be9e-2b35a1f6922d",
    "metadata": {},
    "source": [
-    "# Entity linking\n",
+    "# 4. Entity linking\n",
     "\n",
     "This notebook links the entities found in the previous steps (NER, Disambiguation) to the artefacts\n",
     "\n",
@@ -63,7 +63,7 @@
    "id": "85ec9644-9cea-4ea5-9396-a9c039c5f538",
    "metadata": {},
    "source": [
-    "## 1. Import required software libraries\n",
+    "## 4.1. Import required software libraries\n",
     "\n",
     "Entity linking requires importing some standard software libraries. This step may take some time when run for the first time but in successive runs it will be a lot faster."
    ]
@@ -249,7 +249,7 @@
    "id": "35f98f99-340f-4e2d-8587-796e9fc5172a",
    "metadata": {},
    "source": [
-    "## 2. Read the texts that require processing\n",
+    "## 4.2. Read the texts that require processing\n",
     "\n",
     "The texts should have been processed by the `ner.ipynb` notebook. The file read here is an output file of the `disambiguation-candidates.ipynb` notebook which in turn processed the `ner.ipynb` output. We read the texts and the associated metadata and show the first text with its entities."
    ]
@@ -283,7 +283,7 @@
    "id": "3e2c9ca7-bb1c-4c94-afa0-1a0016def39d",
    "metadata": {},
    "source": [
-    "## 3. Link entities with GPT\n",
+    "## 4.3. Link entities with GPT\n",
     "\n",
     "We link entities to the artefacts by sending a prompt with each entity text, the context text and six candidate link types to an LLM. We ask the LLM to return the id associated with the type that best matches the type of link between the entity and the artefact."
    ]
@@ -367,7 +367,7 @@
    "id": "f4ae9406-2049-4bbe-bed2-33bf5d1ee4d1",
    "metadata": {},
    "source": [
-    "## 4. Linking visualization\n",
+    "## 4.4. Linking visualization\n",
     "\n",
     "We visualize the results of the linking process by displaying the numeric linking code in superscript next to the entity in its context. Please note that the six numeric codes represent the relations between the entity and the artefact and stand for the following:\n",
     "\n",
@@ -393,7 +393,7 @@
    "source": [
     "for text_id, text in enumerate(texts_output):\n",
     "    if text_id < 3:\n",
-    "        display(HTML(utils.mark_entities_in_text(text[\"text_llm_output\"], text[\"entities\"])))"
+    "        display(HTML(utils.mark_entities_in_text(text[\"text_llm_output\"], text[\"entities\"], model)))"
    ]
   },
   {
@@ -401,7 +401,7 @@
    "id": "1e9cb9e1-87d8-44ac-af29-051df6d10ba5",
    "metadata": {},
    "source": [
-    "## 5. Save results\n",
+    "## 4.5. Save results\n",
     "\n",
     "We save the results in a json file. The helper function used for this is defined in the file `utils.py`"
    ]
@@ -431,7 +431,7 @@
    "id": "460091a2-7b72-49fa-9b11-cba73a5ad1f7",
    "metadata": {},
    "source": [
-    "## 6. Alternatives for entity linking\n",
+    "## 4.6. Alternatives for entity linking\n",
     "\n",
     "Here we define some alternatives for disambiguation, for example if you do not have an OpenAI API key or if you do not want to share your data with OpenAI."
    ]
@@ -441,9 +441,17 @@
    "id": "954dc941-21b3-434e-8853-402c55952a47",
    "metadata": {},
    "source": [
-    "### 6.1. Disambiguate entities with Qwen\n",
+    "### 4.6.1. Disambiguate entities with Qwen\n",
     "\n",
     "Here we use [Qwen](https://en.wikipedia.org/wiki/Qwen), a locally-run model developed by the company Alibaba. The model has hardware requirements which your computer may not satisfy: it needs a GPU and about 12 gigabytes of memory. When running this model on Google Colab, it is recommended to use the runtime environment `T4 GPU`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f462e6cf-d536-44d5-9f6a-334f2143d19e",
+   "metadata": {},
+   "source": [
+    "First we define a helper function"
    ]
   },
   {
@@ -488,6 +496,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "50685c3a-fe07-4fd9-97b9-12472dc54f21",
+   "metadata": {},
+   "source": [
+    "Next we apply the helper function to choose the best link type for each entity"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "10495a0d-cf81-4628-8a6d-c03453806f39",
@@ -505,10 +521,10 @@
     }
    ],
    "source": [
-    "MODEL = \"qwen3:8b\"\n",
+    "model = \"qwen3:8b\"\n",
     "MAX_PROCESSED = 2\n",
     "\n",
-    "processed_entities = ollama_link_suggestion(MODEL, texts_input[:MAX_PROCESSED])\n",
+    "processed_entities = ollama_link_suggestion(model, texts_input[:MAX_PROCESSED])\n",
     "texts_output = add_linking_data_to_texts_input(texts_input[:MAX_PROCESSED], processed_entities)\n",
     "print({\"text_cleaned\": texts_output[0][\"text_cleaned\"],\n",
     "       \"entities\": [{\"entity_text\": entity[\"text\"], \n",
