--- a/notebooks/tasks/ner.ipynb
+++ b/notebooks/tasks/ner.ipynb
@@ -17,7 +17,7 @@
     "id": "402d2026"
    },
    "source": [
-    "# Named Entity Recognition\n",
+    "# 2. Named Entity Recognition\n",
     "\n",
     "Named Entity Recognition (NER) is a fundamental Natural Language Processing (NLP) task that involves identifying and classifying named entities (like people, places, organizations) within text. For example, in the sentence \"Shakespeare wrote Romeo and Juliet in London\", a NER system would identify \"Shakespeare\" as a person, \"Romeo and Juliet\" as a work of art, and \"London\" as a location. NER is crucial for extracting structured information from unstructured text, making it valuable for tasks like information retrieval, question answering, and metadata enrichment. In this notebook, we'll explore how to perform NER using both traditional NLP approaches and modern Large Language Models.\n",
     "\n",
@@ -56,7 +56,7 @@
     "id": "168ccb96"
    },
    "source": [
-    "## 1. Import required software libraries\n",
+    "## 2.1. Import required software libraries\n",
     "\n",
     "Preprocessing data requires importing some standard software libraries. This step may take some time when run for the first time but in successive runs it will be a lot faster."
    ]
@@ -231,7 +231,7 @@
     "id": "b422d93f-eb91-422e-a6c3-c6c56a16d6d0"
    },
    "source": [
-    "## 2. Read the text that requires processing\n",
+    "## 2.2. Read the text that requires processing\n",
     "\n",
     "The text should have been preprocessed by the `data_preparation.ipynb` notebook. The file read here is an output file of that notebook. We select the first text and show it."
    ]
@@ -268,7 +268,7 @@
     "id": "2cf4c708"
    },
    "source": [
-    "## 3. Named entity recognition with ChatGPT\n",
+    "## 2.3. Named entity recognition with ChatGPT\n",
     "\n",
     "We use OpenAI's ChatGPT for recognizing named entities in the text. For this approach you need an OpenAI API key. Store it in the environment variable OPENAI_API_KEY or in the file OPENAI_API_KEY. If you are working in Google Colab, you may also store the key among the Secrets, using the name OPENAI_API_KEY.\n",
     "\n",
@@ -364,7 +364,7 @@
     "id": "76f086af"
    },
    "source": [
-    "## 4. Named entity visualization\n",
+    "## 2.4. Named entity visualization\n",
     "\n",
     "Here we show the results of named entity recognition in a more readable format"
    ]
@@ -470,7 +470,7 @@
     "id": "35713f16-99bd-4392-a894-dd59b594bded"
    },
    "source": [
-    "## 5. Save results\n",
+    "## 2.5. Save results\n",
     "\n",
     "Just like in the data preprocessing notebook, we save the results in a json file"
    ]
@@ -508,6 +508,9 @@
     "for index, entities in enumerate(entities_all):\n",
     "    input_data[index][\"entities\"] = entities[\"entities\"]\n",
     "    input_data[index][\"text_llm_output\"] = entities[\"text_llm_output\"]\n",
+    "for rest_index in range(index, len(input_data)):\n",
+    "    input_data[rest_index][\"entities\"] = []\n",
+    "    input_data[rest_index][\"text_llm_output\"] = []   \n",
     "utils.save_data_to_json_file(input_data, file_name=\"output_ner.json\", in_colab=in_colab)"
    ]
   },
@@ -518,7 +521,7 @@
     "id": "059e3666-72c9-4c18-b237-9c0d60eccbfd"
    },
    "source": [
-    "## 6. Alternatives for named entity recognition\n",
+    "## 2.6. Alternatives for named entity recognition\n",
     "\n",
     "Here we define some alternatives for recognising named entities, for example if you do not have an OpenAI API key or if you do not want to share your data with OpenAI."
    ]
@@ -530,7 +533,7 @@
     "id": "9dcf5dd7-a009-4426-a068-71891e052578"
    },
    "source": [
-    "### 6.1. Named entity recognition with Spacy\n",
+    "### 2.6.1. Named entity recognition with Spacy\n",
     "\n",
     "This named entity recognizer runs at your own computer and does not require an access key"
    ]
@@ -651,9 +654,9 @@
     "id": "OVzlQ0_61KUd"
    },
    "source": [
-    "### 6.2. Named entity recognition with Qwen\n",
+    "### 2.6.2. Named entity recognition with Qwen\n",
     "\n",
-    "Here we use [Qwen](https://en.wikipedia.org/wiki/Qwen), a locally-run model developed by the company Alibaba. The model has hardware requirements which your computer may not satisfy: it needs a GPU and about 12 gigabytes of memory. When running this model on Google Colab, it is recommended to use the runtime environment `T4 GPU`."
+    "Here we use [Qwen](https://en.wikipedia.org/wiki/Qwen), a locally-run model developed by the company Alibaba. The model has hardware requirements which your computer may not satisfy: it needs a GPU and about 12 gigabytes of memory. When running this model on Google Colab, it is recommended to use the runtime environment `T4 GPU`. If the model is too slow for you, the model `qwen3:0.6` can be used as an alternative."
    ]
   },
   {
