--- a/notebooks/tasks/data_preparation.ipynb
+++ b/notebooks/tasks/data_preparation.ipynb
@@ -16,7 +16,7 @@
     "id": "1hLkfqo0gRKP"
    },
    "source": [
-    "# Prepare Cultural Heritage Data for Named Entity Analysis\n",
+    "# 1. Prepare Cultural Heritage Data for Named Entity Analysis\n",
     "\n",
     "This notebook fetches and prepares data for named entity analysis. \n",
     "\n",
@@ -62,7 +62,7 @@
     "id": "_g_sWNZ7HLN2"
    },
    "source": [
-    "## 1. Install required software libraries\n",
+    "## 1.1. Install required software libraries\n",
     "\n",
     "Preprocessing data requires importing some standard software libraries. This step may take some time when run for the first time but in successive runs it will be a lot faster."
    ]
@@ -174,7 +174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Reading texts from a csv file\n",
+    "## 1.2. Reading texts from a csv file\n",
     "\n",
     "We use the artefact descriptions from the Egyptian Museum in Turin as example texts. We use two columns of the file, one with the identifier of the artefact and one with the description text"
    ]
@@ -244,7 +244,7 @@
     "id": "hkcitK7zHcuK"
    },
    "source": [
-    "## 3. Preprocess text for named entity analysis\n",
+    "## 1.3. Preprocess text for named entity analysis\n",
     "\n",
     "Three steps are performed while preprocessing the texts:\n",
     "\n",
@@ -451,7 +451,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Save results\n",
+    "## 1.4. Save results\n",
     "\n",
     "When running the notebook locally, the preprocessed texts can be saved locally. When running the notebook on Google Colab, the results need to be downloaded because saved files on Google Colab will be removed automatically. We use a function defined in the file `utils.py` for this:"
    ]
@@ -477,7 +477,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Alternatives for reading text data\n",
+    "## 1.5. Alternatives for reading text data\n",
     "\n",
     "Here are some methods for reading texts as alternatives for reading them from a museum website as presented in chapter 2 of this notebook. Run these code blocks instead of the code blocks of chapter 2 and then proceed with chapter 3."
    ]
@@ -486,7 +486,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.1. Text examples defined in the code\n",
+    "### 1.5.1. Text examples defined in the code\n",
     "\n",
     "We use descriptions from three famous artworks from Wikipedia, written in other languages than English."
    ]
@@ -547,7 +547,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.2. Read a single text from a text file\n",
+    "### 1.5.2. Read a single text from a text file\n",
     "\n",
     "We use a description of a monument from Wikipedia, written in a different language than English"
    ]
@@ -613,7 +613,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.3. Read text from a pdf file"
+    "### 1.5.3. Read text from a pdf file"
    ]
   },
   {
@@ -683,7 +683,7 @@
     "id": "yKvJmCRQHQUN"
    },
    "source": [
-    "### 5.4. Download text from museum website\n",
+    "### 1.5.4. Download text from museum website\n",
     "\n",
     "We use the description of a painting by Claude Monet from the artwork Cleveland Museum website as example text"
    ]
@@ -762,7 +762,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.5 Recognise text from pdf or image with optical character recognition (ocr)\n",
+    "### 1.5.5 Recognise text from pdf or image with optical character recognition (ocr)\n",
     "\n",
     "We have a separate notebook for this task: `../data_preparation/Run-Docling.ipynb`"
    ]
