added linking evaluation

--- a/notebooks/evaluation/evaluation.ipynb
+++ b/notebooks/evaluation/evaluation.ipynb
@@ -77,6 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import copy\n",
     "from docopt import docopt\n",
     "import json\n",
     "import logging\n",
@@ -125,7 +126,8 @@
     "    ! git clone https://github.com/enriching-digital-heritage/HIPE-scorer.git\n",
     "    os.chdir(os.path.join(BASE_DIR, \"HIPE-scorer\"))\n",
     "    ! pip install -r requirements.txt\n",
-    "    ! pip install ."
+    "    ! pip install .\n",
+    "    os.chdir(BASE_DIR)"
    ]
   },
   {
@@ -337,7 +339,7 @@
     "                if token[\"sent_id\"] != sent_id:\n",
     "                    print(\"-\\tO\\tO\\tO\", file=hipe_file)\n",
     "                    sent_id = token[\"sent_id\"]\n",
-    "                print(token[\"text\"], token[data_column_name], \"O\", \"O\", sep=\"\\t\", file=hipe_file)\n",
+    "                print(token[\"text\"], token[data_column_name], token[data_column_name], \"O\", sep=\"\\t\", file=hipe_file)\n",
     "            print(\"-\\tO\\tO\\tO\", file=hipe_file)\n",
     "        hipe_file.close()"
    ]
@@ -351,12 +353,12 @@
     "ARGS_VALUES = {'--glue': None, '--help': False, '--hipe_edition': 'hipe-2020',\n",
     " '--log': 'log.txt', '--n_best': '1', '--noise-level': None,\n",
     " '--original_nel': False, '--skip-check': False, '--suffix': None,\n",
-    " '--tagset': None, '--task': 'nerc_coarse', '--time-period': None}\n",
+    " '--tagset': None, '--time-period': None}\n",
     "\n",
     "\n",
     "def run_scorer(args):\n",
     "    \"\"\"Run the HIPE-scorer to perform the evaluation\"\"\"\n",
-    "    tasks = (\"nerc_coarse\")\n",
+    "    tasks = (\"nerc_coarse\", \"nel\")\n",
     "    if args[\"--task\"] not in tasks:\n",
     "        msg = \"Please restrict to one of the available evaluation tasks: \" + \", \".join(tasks)\n",
     "        logging.error(msg)\n",
@@ -397,7 +399,7 @@
     "    \"\"\"Extract relevant evaluation scores from the output file of the scorer and show them\"\"\"\n",
     "    hipe_scores = utils.read_json_file(os.path.join(SCORER_DIR, HIPE_MACHINE_FILE))\n",
     "    print(colored(\"HIPE Analysis\", attrs=[\"bold\"]))\n",
-    "    for label in LABELS:\n",
+    "    for label in labels:\n",
     "        print(f\"{label:>8}:\", {key: round(100*value, 1) \n",
     "              for key, value in hipe_scores['NE-COARSE-LIT']['TIME-ALL']['LED-ALL'][label]['exact'].items() \n",
     "              if key in ['P_micro', 'R_micro', 'F1_micro']})"
@@ -423,13 +425,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:root:No tags in the column '['NE-COARSE-METO']' of the system response file: '../HIPE_machine.txt'\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -437,7 +432,6 @@
       "true: 1 pred: 1\n",
       "data_format_true [[3790]]\n",
       "data_format_pred [[3790]]\n",
-      "2025-11-28 17:48:38,653 - WARNING - ../HIPE_machine.txt - No tags in the column '['NE-COARSE-METO']' of the system response file: '../HIPE_machine.txt'\n",
       "\u001b[1mHIPE Analysis\u001b[0m\n",
       "  PERSON: {'P_micro': 88.5, 'R_micro': 78.0, 'F1_micro': 82.9}\n",
       "LOCATION: {'P_micro': 53.4, 'R_micro': 78.0, 'F1_micro': 63.4}\n"
@@ -457,6 +451,223 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Evaluation of named entity linking"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_gold_linking_entities_to_text_tokens(text_tokens, gold_entities):\n",
+    "    text_tokens_text_id = 0\n",
+    "    text_tokens_token_id = 0\n",
+    "    for gold_entities_text in gold_entities:\n",
+    "        for gold_entity in gold_entities_text:\n",
+    "            while text_tokens[text_tokens_text_id][text_tokens_token_id][\"start\"] < gold_entity[\"start\"]:\n",
+    "                text_tokens[text_tokens_text_id][text_tokens_token_id][\"wikidata_id\"] = \"NIL\"\n",
+    "                text_tokens_token_id += 1\n",
+    "                if text_tokens_token_id >= len(text_tokens[text_tokens_text_id]):\n",
+    "                    break\n",
+    "            while text_tokens_token_id < len(text_tokens[text_tokens_text_id]) and text_tokens[text_tokens_text_id][text_tokens_token_id][\"end\"] <= gold_entity[\"end\"]:\n",
+    "                if \"wikidata_id\" not in gold_entity:\n",
+    "                    text_tokens[text_tokens_text_id][text_tokens_token_id][\"wikidata_id\"] = \"NIL\"\n",
+    "                else:\n",
+    "                   text_tokens[text_tokens_text_id][text_tokens_token_id][\"wikidata_id\"] = gold_entity[\"wikidata_id\"][\"id\"]\n",
+    "                text_tokens_token_id += 1\n",
+    "        while text_tokens_token_id < len(text_tokens[text_tokens_text_id]):\n",
+    "            text_tokens[text_tokens_text_id][text_tokens_token_id][\"wikidata_id\"] = \"NIL\"\n",
+    "            text_tokens_token_id += 1\n",
+    "        text_tokens_text_id += 1\n",
+    "        text_tokens_token_id = 0\n",
+    "    return text_tokens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_char_offsets_of_entities_linking(text_id, text, raw_entities):\n",
+    "    \"\"\"lookup list of entities in original text and return list with character offsets\"\"\"\n",
+    "    cleaned_entities = []\n",
+    "    for raw_entity in raw_entities:\n",
+    "        char_offsets = get_char_offsets_of_entity(text, raw_entity[\"text\"])\n",
+    "        if not char_offsets:\n",
+    "            print(f\"raw entity not found in text! text_id: {text_id}; entity: {raw_entity['text']}\")\n",
+    "            continue\n",
+    "        cleaned_entities.extend([char_offset | {\"text\": raw_entity[\"text\"], \"wikidata_id\": raw_entity[\"wikidata_id\"]} \n",
+    "                               for char_offset in char_offsets])\n",
+    "    return cleaned_entities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_machine_entities(file_name):\n",
+    "    linking_json = utils.read_json_file(LINKING_OUTPUT_FILE)\n",
+    "    machine_entities = []\n",
+    "    for text_id, text in enumerate(linking_json):\n",
+    "        cleaned_entities = get_char_offsets_of_entities_linking(text_id, text[\"text_cleaned\"], text[\"entities\"])\n",
+    "        cleaned_entities = remove_overlapping_entities(sorted(cleaned_entities, \n",
+    "                                                              key=lambda entity: (entity[\"start_char\"], \n",
+    "                                                                                  -entity[\"end_char\"])))\n",
+    "        for cleaned_entity in cleaned_entities:\n",
+    "            cleaned_entity[\"start\"] = cleaned_entity.pop(\"start_char\")\n",
+    "            cleaned_entity[\"end\"] = cleaned_entity.pop(\"end_char\")\n",
+    "        machine_entities.append(cleaned_entities)\n",
+    "    return machine_entities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HIPE_MACHINE_FILE = \"HIPE_machine.txt\"\n",
+    "HIPE_GOLD_FILE = \"HIPE_gold.txt\"\n",
+    "\n",
+    "def save_linking_data_to_file(text_tokens, data_column_name, file_name):\n",
+    "    \"\"\"Save the data for evaluation to a single specified file\"\"\"\n",
+    "    with open(file_name, \"w\") as hipe_file:\n",
+    "        print(\"TOKEN\\tNE-COARSE-LIT\\tNE-COARSE-METO\\tNEL-LIT\\tNEL-METO\\tMISC\", file=hipe_file)\n",
+    "        for text in text_tokens:\n",
+    "            sent_id = 0\n",
+    "            for token in text:\n",
+    "                if token[\"sent_id\"] != sent_id:\n",
+    "                    print(\"-\\tO\\tO\\tNIL\\tNIL\\tO\", file=hipe_file)\n",
+    "                    sent_id = token[\"sent_id\"]\n",
+    "                print(token[\"text\"], token[data_column_name], token[data_column_name], \n",
+    "                                     token[\"wikidata_id\"], token[\"wikidata_id\"], \"O\", sep=\"\\t\", file=hipe_file)\n",
+    "            print(\"-\\tO\\tO\\tNIL\\tNIL\\tO\", file=hipe_file)\n",
+    "        hipe_file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SCORER_DIR = \"HIPE-scorer\"\n",
+    "\n",
+    "def evaluate_linking(text_tokens_gold, text_tokens_machine):\n",
+    "    \"\"\"Evaluate the data present in text tokens: save them, run the scorer and show the results\"\"\"\n",
+    "    save_linking_data_to_file(text_tokens_gold, \"gold_tag\", HIPE_GOLD_FILE)\n",
+    "    save_linking_data_to_file(text_tokens_machine, \"machine_tag\", HIPE_MACHINE_FILE)\n",
+    "    os.chdir(os.path.join(BASE_DIR, SCORER_DIR))\n",
+    "    run_scorer(args={\"--ref\": os.path.join(\"..\", HIPE_GOLD_FILE),\n",
+    "                     \"--pred\": os.path.join(\"..\", HIPE_MACHINE_FILE),\n",
+    "                     \"--task\": \"nel\",\n",
+    "                     \"--outdir\": \".\"})\n",
+    "    os.chdir(BASE_DIR)\n",
+    "    show_scores_linking()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def show_scores_linking(labels=[\"ALL\"]):\n",
+    "    \"\"\"Extract relevant evaluation scores from the output file of the scorer and show them\"\"\"\n",
+    "    hipe_scores = utils.read_json_file(os.path.join(SCORER_DIR, HIPE_MACHINE_FILE))\n",
+    "    print(colored(\"HIPE Analysis\", attrs=[\"bold\"]))\n",
+    "    for label in labels:\n",
+    "        print(f\"{label}:\", {key: round(100*value, 1) \n",
+    "              for key, value in hipe_scores['1']['NEL-LIT']['TIME-ALL']['LED-ALL'][label]['exact'].items() \n",
+    "              if key in ['P_micro', 'R_micro', 'F1_micro']})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true: 1 pred: 1\n",
+      "data_format_true [[3790]]\n",
+      "data_format_pred [[3790]]\n",
+      "\u001b[1mHIPE Analysis\u001b[0m\n",
+      "ALL: {'P_micro': 97.3, 'R_micro': 96.7, 'F1_micro': 97.0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "LINKING_OUTPUT_FILE = \"../tasks/output_linking_34e26bfd19c837e400a5fcb214cd1e7a25304a12.json\"\n",
+    "\n",
+    "gold_entities = utils.read_json_file(\"linking_gold.json\")\n",
+    "text_tokens_gold = add_gold_linking_entities_to_text_tokens(copy.deepcopy(text_tokens), gold_entities)\n",
+    "\n",
+    "machine_entities = get_machine_entities(LINKING_OUTPUT_FILE)\n",
+    "text_tokens_machine = add_gold_linking_entities_to_text_tokens(copy.deepcopy(text_tokens), machine_entities)\n",
+    "\n",
+    "evaluate_linking(text_tokens_gold, text_tokens_machine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -474,7 +685,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Compare analysis with gold data\n",
+    "## 4. Compare analysis with gold data\n",
     "\n",
     "We need helper functions for accessing the HIPE-scorer, for converting the data to the scorer format and for interpreting the analysis of the scorer"
    ]
@@ -576,7 +787,7 @@
     "id": "sXj6rEaox9DE"
    },
    "source": [
-    "## 4. Preparation for manual assessment"
+    "## 5. Preparation for manual assessment"
    ]
   },
   {
@@ -702,7 +913,7 @@
     "id": "oNlHNhvOzIRv"
    },
    "source": [
-    "## 5. Data preparation"
+    "## 6. Data preparation"
    ]
   },
   {
@@ -838,7 +1049,7 @@
     "id": "3kw9pN2CwP4r"
    },
    "source": [
-    "## 6. NER evaluation with groundtruth data by using the HIPE scorer"
+    "## 7. NER evaluation with groundtruth data by using the HIPE scorer"
    ]
   },
   {
@@ -872,7 +1083,7 @@
     "id": "XPsSJaqBxgC9"
    },
    "source": [
-    "### Running the scorer"
+    "### 7.1 Running the scorer"
    ]
   },
   {
@@ -1111,7 +1322,7 @@
     "id": "quWWEXdylgGn"
    },
    "source": [
-    "## 7. Manual assessment of the output"
+    "## 8. Manual assessment of the output"
    ]
   },
   {
@@ -1120,7 +1331,7 @@
     "id": "-cSUXxR32rlg"
    },
    "source": [
-    "### 7.1. Displaying the entities"
+    "### 8.1. Displaying the entities"
    ]
   },
   {
@@ -1208,7 +1419,7 @@
     "id": "hIBej6Wf2R6P"
    },
    "source": [
-    "### 7.2. Giving feedback on the entities"
+    "### 8.2. Giving feedback on the entities"
    ]
   },
   {
@@ -1266,7 +1477,7 @@
     "id": "1svSZ93EJlfz"
    },
    "source": [
-    "## 8. EL evaluation with groundtruth data\n",
+    "## 9. EL evaluation with groundtruth data\n",
     "\n",
     "TODO."
    ]
@@ -1277,7 +1488,7 @@
     "id": "-riY-m5r7xv_"
    },
    "source": [
-    "## 9. Variations and alternatives\n",
+    "## 10. Variations and alternatives\n",
     "\n",
     "Another approach if the user does not have groundtruth data could be to use an **LLM-judge** approach to evaluate the NER output in absence of labelled golden data. The task of the LLM is then to “review” the NER output and to assess its quality."
    ]
